// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads existing manifests (monorepo) 1`] = `
Array [
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "monorepo",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && node output/node-scripts-docs.js",
    "scriptName": "nsd-debug",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "monorepo",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;

exports[`loads existing manifests (simple project) 1`] = `
Array [
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && node output/node-scripts-docs.js",
    "scriptName": "nsd-debug",
  },
  ScriptStoreEntry {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;
